2022-07-08  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/node.cpp (get_register, get_string): Reorder
	null pointer inequality comparisons; they don't need to be in a
	funny order because it's pretty hard to mistype `!=` as an
	assignment operator.  Annotate them as null pointers to ease any
	future migration to ISO C++11.  Use primitive type constructor
	instead of C-style cast operator; this seems more idiomatic.

2022-07-08  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/preproc/html/pre-html.cpp (generateImages): Flush the
	standard error stream after writing to it in a loop.

2022-07-08  G. Branden Robinson <g.branden.robinson@gmail.com>

	* tmac/s.tmac (RP): Recognize new optional arguments
	`no-renumber` and `no-repeat-info`, the latter as a synonym for
	the existing `no`.  The former suppresses the page number
	manipulation that normally occurs.  Drop now-unnecessary `pn 0`
	request.
	(top level, cov*first-page-init, RP, cov*print): Rename
	`cov*rp-format` to `cov*use-rp-format` for clarity.
	(cov*break-page): New macro breaks the cover page at the end,
	resetting next page number to 1 only if desired by user.
	(cov*print, cov*rp-print): Call `cov*break-page` instead of
	invoking `bp`.

	* doc/groff.texi (Document Description Macros) <RP>:
	* doc/ms.ms (Document description macros) <RP>:
	* tmac/groff_ms.7.man (Document description macros) <RP>:
	Document them.

	* NEWS: Add item.

2022-07-08  G. Branden Robinson <g.branden.robinson@gmail.com>

	* tmac/s.tmac: Rename register `cov*rp-no` to
	`cov*rp-no-repeat-info`.

2022-07-08  Deri James  <deri@chuzzlewit.myzen.co.uk>

	* font/devpdf/util/BuildFoundries.pl (LocateFile): Some systems
	store .afm files in a parallel directory to the Type 1 files,
	restore original path after checking for parallel directory.

2022-07-07  G. Branden Robinson <g.branden.robinson@gmail.com>

	* font/devpdf/devpdf.am (font/devpdf/download): Call